--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     /* Base Styles */
     body {
       font-family: 'Poppins', sans-serif;
-      overflow: hidden;
     }
 
     /* Glassmorphic Components */
@@ -127,12 +126,14 @@
       border-color: rgba(255, 255, 255, 0.2) !important;
     }
 
-    body.dark-mode #toggleDarkMode {
+    body.dark-mode #toggleDarkMode,
+    body.dark-mode button[onclick="showApiKeySettings()"] {
       background-color: #2f2f2f;
       color: #e2e8f0;
     }
 
-    body.dark-mode #toggleDarkMode:hover {
+    body.dark-mode #toggleDarkMode:hover,
+    body.dark-mode button[onclick="showApiKeySettings()"]:hover {
       background-color: #3b3b3b;
     }
 
@@ -142,6 +143,18 @@
 
     body.dark-mode #ambientOverlay {
       opacity: 1;
+    }
+
+    /* Reset Button Dark Mode */
+    body.dark-mode #resetButton {
+      border-color: #ef4444;
+      color: #ef4444;
+    }
+
+    body.dark-mode #resetButton:hover {
+      background-color: rgba(239, 68, 68, 0.1);
+      border-color: #dc2626;
+      color: #dc2626;
     }
 
     /* UI Animations */
@@ -168,10 +181,93 @@
     #ambientBackground {
       transition: background 0.6s ease, color 0.4s ease, border-color 0.4s ease;
     }
+
+    /* Timer Completion Animations */
+    @keyframes shake {
+      0%, 100% { transform: translateX(0); }
+      10%, 30%, 50%, 70%, 90% { transform: translateX(-10px); }
+      20%, 40%, 60%, 80% { transform: translateX(10px); }
+    }
+
+    @keyframes buzz {
+      0%, 100% { transform: scale(1) rotate(0deg); }
+      25% { transform: scale(1.05) rotate(1deg); }
+      50% { transform: scale(1.1) rotate(-1deg); }
+      75% { transform: scale(1.05) rotate(1deg); }
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.2); opacity: 0.7; }
+    }
+
+    .shake-animation {
+      animation: shake 0.8s ease-in-out 3;
+    }
+
+    .buzz-animation {
+      animation: buzz 0.5s ease-in-out 4;
+    }
+
+    .pulse-animation {
+      animation: pulse 1s ease-in-out 3;
+    }
+
+    /* Fireworks Container */
+    #fireworksContainer {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 1000;
+      overflow: hidden;
+    }
+
+    /* Firework Particle */
+    .firework {
+      position: absolute;
+      width: 4px;
+      height: 4px;
+      border-radius: 50%;
+      pointer-events: none;
+    }
+
+    @keyframes firework-explosion {
+      0% {
+        transform: translate(0, 0) scale(0);
+        opacity: 1;
+      }
+      50% {
+        opacity: 1;
+      }
+      100% {
+        transform: translate(var(--dx, 0), var(--dy, 0)) scale(1);
+        opacity: 0;
+      }
+    }
+
+    .firework-particle {
+      animation: firework-explosion 1.5s ease-out forwards;
+    }
+
+    /* Celebration Flash */
+    @keyframes celebration-flash {
+      0%, 100% { background-color: transparent; }
+      50% { background-color: rgba(255, 215, 0, 0.3); }
+    }
+
+    .celebration-flash {
+      animation: celebration-flash 0.3s ease-in-out 3;
+    }
   </style>
 </head>
 
 <body class="bg-white text-gray-800 flex items-center justify-center h-screen">
+  <!-- Fireworks Container -->
+  <div id="fireworksContainer"></div>
+  
   <!-- Ambient Background for Break Mode -->
   <div id="ambientBackground">
     <div class="clouds">
@@ -188,29 +284,41 @@
   </div>
 
   <!-- Main Content Container -->
-  <div class="w-full max-w-4xl text-center px-4">
+  <div class="w-full max-w-4xl text-center px-4 pb-20">
     <!-- Page Title -->
     <h1 class="text-4xl font-semibold mb-8 tracking-wider leading-tight text-gray-800">
       Design Break Timer
     </h1>
 
-    <!-- Dark Mode Toggle -->
-    <button
-      id="toggleDarkMode"
-      class="fixed bottom-4 left-1/2 transform -translate-x-1/2 bg-gray-200 text-gray-800 px-4 py-1 rounded-full text-sm shadow hover:bg-gray-300 transition z-50"
-    >
-      <i class="fas fa-moon"></i> Dark Mode
-    </button>
+    <!-- Settings and Dark Mode Controls -->
+    <div class="fixed bottom-4 left-1/2 transform -translate-x-1/2 flex gap-2 z-50">
+      <!-- API Settings Button -->
+      <button
+        onclick="showApiKeySettings()"
+        class="bg-gray-200 text-gray-800 px-4 py-1 rounded-full text-sm shadow hover:bg-gray-300 transition-all duration-200 hover:shadow-md transform hover:scale-105"
+        title="Configure OpenAI API Key"
+      >
+        <i class="fas fa-cog"></i> API Settings
+      </button>
+      
+      <!-- Dark Mode Toggle -->
+      <button
+        id="toggleDarkMode"
+        class="bg-gray-200 text-gray-800 px-4 py-1 rounded-full text-sm shadow hover:bg-gray-300 transition-all duration-200 hover:shadow-md transform hover:scale-105"
+      >
+        <i class="fas fa-moon"></i> Dark Mode
+      </button>
+    </div>
 
     <!-- Timer Controls Container -->
-    <div class="glass p-8 rounded-2xl mb-10">
+    <div class="glass p-8 rounded-2xl mb-10 relative">
       <!-- Timer Displays -->
       <div class="flex justify-center space-x-16 mb-12">
         <!-- Work Timer -->
         <div class="text-center">
           <div class="text-lg font-semibold text-gray-600">Work Timer</div>
-          <div id="timerDisplay" class="text-4xl font-bold mb-4">25:00</div>
-          <button id="startWorkButton" class="bg-green-500 text-white py-2 px-8 rounded-full">
+          <div id="timerDisplay" class="text-7xl font-medium mb-6">25:00</div>
+          <button id="startWorkButton" class="bg-green-500 hover:bg-green-600 text-white py-2 px-8 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105">
             Start Work Timer
           </button>
         </div>
@@ -218,8 +326,8 @@
         <!-- Break Timer -->
         <div class="text-center">
           <div class="text-lg font-semibold text-gray-600">Break Timer</div>
-          <div id="breakTimerDisplay" class="text-4xl font-bold mb-4">5:00</div>
-          <button id="startBreakButton" class="bg-green-500 text-white py-2 px-8 rounded-full">
+          <div id="breakTimerDisplay" class="text-7xl font-medium mb-6">5:00</div>
+          <button id="startBreakButton" class="bg-green-500 hover:bg-green-600 text-white py-2 px-8 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105">
             Start Break Timer
           </button>
         </div>
@@ -229,12 +337,12 @@
       <div class="mb-10">
         <h3 class="text-sm text-gray-700">Select Work Timer Length:</h3>
         <div class="flex justify-center flex-wrap gap-3 mt-2">
-          <button class="timer-button bg-blue-500 text-white py-2 px-4 rounded-full" data-time="1">1 min</button>
-          <button class="timer-button bg-blue-500 text-white py-2 px-4 rounded-full" data-time="5">5 min</button>
-          <button class="timer-button bg-blue-500 text-white py-2 px-4 rounded-full" data-time="10">10 min</button>
-          <button class="timer-button bg-blue-500 text-white py-2 px-4 rounded-full" data-time="15">15 min</button>
-          <button class="timer-button bg-blue-500 text-white py-2 px-4 rounded-full" data-time="20">20 min</button>
-          <button class="timer-button bg-blue-500 text-white py-2 px-4 rounded-full" data-time="25">25 min</button>
+          <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="1">1 min</button>
+          <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="5">5 min</button>
+          <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="10">10 min</button>
+          <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="15">15 min</button>
+          <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="20">20 min</button>
+          <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="25">25 min</button>
         </div>
       </div>
 
@@ -242,26 +350,26 @@
       <div class="mb-4">
         <h3 class="text-sm text-gray-700">Select Break Timer Length:</h3>
         <div class="flex justify-center flex-wrap gap-3 mt-2">
-          <button class="break-button bg-blue-500 text-white py-2 px-4 rounded-full" data-time="1">1 min</button>
-          <button class="break-button bg-blue-500 text-white py-2 px-4 rounded-full" data-time="2">2 min</button>
-          <button class="break-button bg-blue-500 text-white py-2 px-4 rounded-full" data-time="5">5 min</button>
-          <button class="break-button bg-blue-500 text-white py-2 px-4 rounded-full" data-time="10">10 min</button>
+          <button class="break-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="1">1 min</button>
+          <button class="break-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="2">2 min</button>
+          <button class="break-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="5">5 min</button>
+          <button class="break-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="10">10 min</button>
         </div>
       </div>
 
       <!-- Reset Button -->
-      <button id="resetButton" class="bg-red-500 text-white py-4 px-8 rounded-full w-1/2 mx-auto mb-4">
-        Reset
+      <button id="resetButton" class="absolute bottom-4 right-4 bg-transparent border-2 border-red-500 text-red-500 hover:bg-red-50 hover:border-red-600 hover:text-red-600 py-2 px-4 rounded-full transition-all duration-200 font-medium shadow-sm hover:shadow-md">
+        <i class="fas fa-redo-alt mr-2"></i>Reset
       </button>
     </div>
 
     <!-- Design Tip Display -->
-    <div id="challengeDisplay" class="glass mt-10 text-lg text-gray-700 border border-gray-300 rounded-lg p-6 shadow-lg bg-white">
-      <div class="bg-gray-100 text-sm text-gray-600 font-semibold px-4 py-1 rounded-t-lg inline-block">
-        Quick Design Tip!
+    <div id="challengeDisplay" class="glass mt-12 text-xl text-gray-700 border border-gray-300 rounded-xl p-10 shadow-xl bg-white max-w-3xl mx-auto relative">
+      <div class="absolute top-4 left-4 bg-gradient-to-r from-purple-500 to-blue-600 text-white text-sm font-bold px-4 py-1 rounded-lg shadow-md">
+        <i class="fas fa-lightbulb mr-2"></i>Quick Design Tip
       </div>
-      <div class="mt-3 text-base font-medium text-gray-800">
-        This will show a design tip...
+      <div class="text-xl font-medium text-gray-800 leading-relaxed px-4 py-2 min-h-[80px] flex items-center mt-8">
+        Finish your work session to get a design tip!
       </div>
     </div>
 
