--- a/index.html
+++ b/index.html
@@ -412,27 +412,40 @@
         </div>
       </div>
 
-      <!-- Work Timer Length Selection -->
-      <div class="mb-10">
-        <h3 class="text-sm text-gray-700">Select Work Timer Length:</h3>
-        <div class="flex justify-center flex-wrap gap-3 mt-2">
-          <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="1">1 min</button>
-          <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="5">5 min</button>
-          <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="10">10 min</button>
-          <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="15">15 min</button>
-          <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="20">20 min</button>
-          <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="25">25 min</button>
-        </div>
-      </div>
+      <!-- Timer Settings Dropdown -->
+      <div class="mb-4 text-center">
+        <button id="settingsToggle" class="bg-gray-500 hover:bg-gray-600 text-white py-2 px-6 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105 flex items-center gap-2 mx-auto">
+          <i class="fas fa-cog"></i>
+          <span>Timer Settings</span>
+          <i id="settingsChevron" class="fas fa-chevron-down transition-transform duration-200"></i>
+        </button>
+        
+        <div id="settingsPanel" class="mt-4 overflow-hidden transition-all duration-300 ease-in-out" style="max-height: 0;">
+          <div class="bg-gray-50 rounded-lg p-6 border border-gray-200">
+            <!-- Work Timer Length Selection -->
+            <div class="mb-6">
+              <h3 class="text-sm text-gray-700 mb-3">Select Work Timer Length:</h3>
+              <div class="flex justify-center flex-wrap gap-3">
+                <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="1">1 min</button>
+                <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="5">5 min</button>
+                <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="10">10 min</button>
+                <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="15">15 min</button>
+                <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="20">20 min</button>
+                <button class="timer-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="25">25 min</button>
+              </div>
+            </div>
 
-      <!-- Break Timer Length Selection -->
-      <div class="mb-4">
-        <h3 class="text-sm text-gray-700">Select Break Timer Length:</h3>
-        <div class="flex justify-center flex-wrap gap-3 mt-2">
-          <button class="break-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="1">1 min</button>
-          <button class="break-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="2">2 min</button>
-          <button class="break-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="5">5 min</button>
-          <button class="break-button bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="10">10 min</button>
+            <!-- Break Timer Length Selection -->
+            <div>
+              <h3 class="text-sm text-gray-700 mb-3">Select Break Timer Length:</h3>
+              <div class="flex justify-center flex-wrap gap-3">
+                <button class="break-button bg-purple-500 hover:bg-purple-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="1">1 min</button>
+                <button class="break-button bg-purple-500 hover:bg-purple-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="2">2 min</button>
+                <button class="break-button bg-purple-500 hover:bg-purple-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="5">5 min</button>
+                <button class="break-button bg-purple-500 hover:bg-purple-600 text-white py-2 px-4 rounded-full transition-all duration-200 shadow-sm hover:shadow-md transform hover:scale-105" data-time="10">10 min</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
