--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
       </button>
     </div>
 
-    <!-- Design Tip Display -->
+    <!-- Design Tip Display 1234 -->
     <div id="challengeDisplay" class="glass mt-12 text-xl text-gray-700 border border-gray-300 rounded-xl p-10 shadow-xl bg-white max-w-3xl mx-auto relative">
       <div class="absolute top-4 left-4 bg-gradient-to-r from-purple-500 to-blue-600 text-white text-sm font-bold px-4 py-1 rounded-lg shadow-md">
         <i class="fas fa-lightbulb mr-2"></i>Quick Design Tip
