--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       width: 100%;
       height: 100%;
       pointer-events: none;
-      z-index: 1000;
+      z-index: 10001;
       overflow: hidden;
     }
 
@@ -609,6 +609,40 @@
     body.dark-mode #timerDisplay:hover {
       text-shadow: 0 0 20px rgba(241, 245, 249, 0.3);
     }
+
+    /* Fullscreen Timer Button Styling */
+    #fullscreenStartPauseButton {
+      font-size: 1.2rem;
+      font-weight: 600;
+      z-index: 10000;
+      position: relative;
+      pointer-events: auto;
+    }
+
+    /* Retro theme fullscreen button */
+    body.retro-theme #fullscreenStartPauseButton {
+      background: transparent !important;
+      border: 2px solid #00ff00 !important;
+      color: #00ff00 !important;
+      border-radius: 0 !important;
+      text-shadow: 0 0 5px #00ff00;
+      box-shadow: 0 0 10px rgba(0, 255, 0, 0.3);
+    }
+
+    body.retro-theme #fullscreenStartPauseButton:hover {
+      background: rgba(0, 255, 0, 0.1) !important;
+      box-shadow: 0 0 15px rgba(0, 255, 0, 0.5);
+    }
+
+    /* Dark mode fullscreen button */
+    body.dark-mode #fullscreenStartPauseButton {
+      background-color: #10b981 !important;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    body.dark-mode #fullscreenStartPauseButton:hover {
+      background-color: #059669 !important;
+    }
   </style>
 </head>
 
@@ -620,6 +654,9 @@
   <div id="fullscreenTimer">
     <div id="fullscreenTimerHeader">WORK</div>
     <div id="fullscreenTimerDisplay">25:00</div>
+    <button id="fullscreenStartPauseButton" class="bg-green-500 hover:bg-green-600 text-white py-3 px-8 rounded-full transition-all duration-200 shadow-lg hover:shadow-xl transform hover:scale-105 mt-8">
+      <i class="fas fa-play mr-2"></i>Start
+    </button>
   </div>
   
   <!-- Ambient Background for Break Mode -->
